--- a/map-service/src/main/resources/META-INF/resources/index.html
+++ b/map-service/src/main/resources/META-INF/resources/index.html
@@ -55,8 +55,8 @@
                     <li>
                         <label>Data source</label>
                         <select id="data-source">
-                            <option value="ads-b">ADS-B receivers</option>
                             <option value="radar">Radar data</option>
+                            <option value="transponder">Transponder data</option>
                         </select>
                     </li>
                     <li id="start">
