Change webpage title

--- a/map-service/src/main/resources/META-INF/resources/index.html
+++ b/map-service/src/main/resources/META-INF/resources/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Live Flight Tracker</title>
+        <title>Live Flight Tracker Demo</title>
         <link rel="stylesheet" href="css/flight-tracker.css">
     </head>
     <body>
         <header>
             <div id="title">
-                <a href="/">Live Flight Tracker</a>
+                <a href="/">Live Flight Tracker Demo</a>
             </div>
             <div id="powered">
                 Powered by <a href="https://quarkus.io" target="_blank"><img src="images/quarkus.png"> Quarkus</a> and <a href="https://www.openstreetmap.org" target="_blank">OpenStreetMap</a>
